--- a/src/component/answer/Style.module.css
+++ b/src/component/answer/Style.module.css
@@ -92,6 +92,20 @@
   background-color: var(--grayScale20);
 }
 
+.notModify {
+  display: flex;
+  padding: 12px 24px;
+  justify-content: center;
+  align-items: center;
+  align-self: stretch;
+  gap: 8px;
+  font-size: 16px;
+  color: var(--grayScale10);
+  background-color: var(--brown30);
+  border-radius: 8px;
+  border: none;
+}
+
 .modifyDone {
   display: flex;
   padding: 12px 24px;
@@ -99,6 +113,7 @@
   align-items: center;
   width: 560px;
   gap: 8px;
+  font-size: 16px;
   color: var(--grayScale10);
   background-color: var(--brown40);
   border-radius: 8px;
@@ -116,18 +131,6 @@
   background-color: var(--grayScale20);
   border: 1px solid var(--brown40);
   outline: 1px solid var(--brown40);
-}
-
-.notModify {
-  display: flex;
-  padding: 12px 24px;
-  justify-content: center;
-  align-items: center;
-  width: 560px;
-  gap: 8px;
-  color: var(--grayScale10);
-  background-color: var(--brown30);
-  border-radius: 8px;
 }
 
 .answerBottom {
