--- a/src/component/answer/Style.module.css
+++ b/src/component/answer/Style.module.css
@@ -97,7 +97,7 @@
   padding: 12px 24px;
   justify-content: center;
   align-items: center;
-  align-self: stretch;
+  width: 560px;
   gap: 8px;
   font-size: 16px;
   color: var(--grayScale10);
@@ -107,16 +107,19 @@
 }
 
 .modifyDone {
+  cursor: pointer;
   display: flex;
   padding: 12px 24px;
   justify-content: center;
   align-items: center;
+  align-self: stretch;
   width: 560px;
   gap: 8px;
   font-size: 16px;
   color: var(--grayScale10);
   background-color: var(--brown40);
   border-radius: 8px;
+  border: none;
 }
 
 .inputAnswer {
